	Fix drawdplin
June, 2012
	Fix bug in trace controller
	(1.7.2)
	Add locarna_n code, alpha status
Aug, 2012
	Fix a bug related to use of trace controller (max-diff) with free
	endgaps.
	Fix autodetection of input multiple alignment file format,
	i.e. FASTA vs. CLUSTAL.
	Change interface of scoring such that gapA (gapB) depends on only
	positions in sequence A (B), resp.
	(1.7.2.1)
	Major improvements of the RnaData class and its interface
	Some clean up
	(1.7.2.5)
	Some bug fixes, support for graph kernel guide tree
	(1.7.2.6)
	Include graph kernel guide tree support in mlocarna
	(1.7.2.7)
	Some cleanup, release.
	Fix bug (missing initialization) in RnaData
	(1.7.3)
Jan, 2013
	Fix bug. Quotes in fasta-names caused failure when
	generating pps via locarna_rnafold_pp in mlocarna.
	(1.7.3.1)
        Resolve rnalib dependency. New configure option with-sparse
	is now required to compile with ExpARNA-P and SPARSE functionality.
	(1.7.5)
Mar, 2013
	Merge in new sparsification related code.
	Added fasta input check in mlocarna.
	(1.7.6)
	Small bug fixes
	Fix memory leaks
	Prepare alignment evaluation functionality
	Code cleanup/refactorizations
	(1.7.6.9)
	introduce configuration header config.h
	fix man page dependency problem

May/Jun, 2013
	Make sure that make check and make distcheck work
	Split RnaData into RnaData and RnaEnsemble
	Introduce new version of pp format (2.0)
	Read/write of inloop probabilities
	Cleaner separation of reading/writing of alignments/probability data v.s. computation;
	  in particulare remove I/O from Alignment class
	Cleaner handling of gaps, alignment edges, and gap symbols in I/O
	New option --stopwatch (in locarna*) to turn on detailed internal timing
	Change class Sequence to be a mere interface to MultipleAlignment that allows operator [] for column access
	Make constraints optional part of multiple alignments; make write/readable with the alignment in clustal and pp format
	Remove options anchorA, anchorB from locarna and locarna_X